--- a/Soulworker Utility/Soulworker Utility.vcxproj
+++ b/Soulworker Utility/Soulworker Utility.vcxproj
@@ -153,7 +153,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <UndefinePreprocessorDefinitions>%(UndefinePreprocessorDefinitions)</UndefinePreprocessorDefinitions>
-      <AdditionalOptions>/Zc:char8_t- %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/Zc:char8_t- /utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -171,7 +171,6 @@
   <ItemGroup>
     <ClInclude Include="Buff Meter\Buff Meter.h" />
     <ClInclude Include="Buff Meter\Buff.h" />
-    <ClInclude Include="Chineses.h" />
     <ClInclude Include="Damage Meter\Damage Meter.h" />
     <ClInclude Include="Damage Meter\History.h" />
     <ClInclude Include="Damage Meter\MySQLite.h" />
@@ -179,6 +178,7 @@
     <ClInclude Include="Damage Meter\SWDamagePlayer.h" />
     <ClInclude Include="Damage Meter\SWDamageSkill.h" />
     <ClInclude Include="Damage Meter\Timer.h" />
+    <ClInclude Include="Language\Chineses.h" />
     <ClInclude Include="Language\English.h" />
     <ClInclude Include="Language\Korean.h" />
     <ClInclude Include="Language\Region.h" />
