--- a/Soulworker Utility/Soulworker Utility.vcxproj
+++ b/Soulworker Utility/Soulworker Utility.vcxproj
@@ -314,6 +314,9 @@
   <ItemGroup>
     <ResourceCompile Include="Soulworker Utility.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="meter_icon_1.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
