--- a/Soulworker Utility/Soulworker Utility.vcxproj
+++ b/Soulworker Utility/Soulworker Utility.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="Damage Meter\Timer.h" />
     <ClInclude Include="Language\Chineses.h" />
     <ClInclude Include="Language\English.h" />
+    <ClInclude Include="Language\Japanese.h" />
     <ClInclude Include="Language\Korean.h" />
     <ClInclude Include="Language\Region.h" />
     <ClInclude Include="Packet Capture\MyWinDivert.h" />
